--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
 ## MySQL
-spring.datasource.url=jdbc:mysql://runerne.dk:8003/test
-spring.datasource.username=kamel
-spring.datasource.password=dreng
+##spring.datasource.url=jdbc:mysql://runerne.dk:8003/test
+##spring.datasource.username=
+##spring.datasource.password=
